Fix spacing

--- a/src/plonetheme/modernbase/theme/css/custom.less
+++ b/src/plonetheme/modernbase/theme/css/custom.less
@@ -73,12 +73,12 @@ body:not(.frontend) {
     }
 
     ul, ol {
-    	-webkit-padding-start: 19px;
     	font-size: 22px;
+    	margin-left: -21px;
     }
 
     ol {
-    	-webkit-padding-start: 24px;
+    	margin-left: -16px;
     }
 
     ul ul {
@@ -607,10 +607,8 @@ footer, body.mce-content-body {
 footer {
 	padding-bottom: 0px;
 
-
-
 	ul {
-		-webkit-padding-start: 0px;
+		margin-left: -40px;
 		list-style-type: none;
 
 		li {
