--- a/src/plonetheme/modernbase/theme/css/slideshow.less
+++ b/src/plonetheme/modernbase/theme/css/slideshow.less
@@ -20,7 +20,6 @@ body.frontend {
 	&.portaltype-news-item,
 	&.portaltype-collection,
 	&.portaltype-portlet-page,
-	&.portaltype-occurrence,
 	&.portaltype-event {
 		.intro-header:before {
 			display: block;
@@ -51,7 +50,7 @@ body.frontend {
 		}
 	}
 
-	&:not(.portaltype-document):not(.portaltype-news-item):not(.portaltype-collection):not(.portaltype-portlet-page):not(.portaltype-event):not(.portaltype-occurrence) {
+	&:not(.portaltype-document):not(.portaltype-news-item):not(.portaltype-collection):not(.portaltype-portlet-page):not(.portaltype-event) {
 		.page-container {
 			padding-top: 150px;
 		}
